--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       }
     </style>
   </head>
-  <body ontouchstart="eval(document.querySelector('#run-js').value)">
+  <body>
     <div id="alert-box">
       <p class="alert-title">Javascript Snake</p>
       <p class="alert-description">Use arrow keys or WASD to play</p>
